fix wrapping of h1 in hero unit for mobile devices

--- a/source/stylesheets/partials/_home.scss
+++ b/source/stylesheets/partials/_home.scss
@@ -57,6 +57,7 @@ section.home {
         h1 {
           font-size: 1.3em;
           margin-bottom: .5em;
+          text-align: left;
 
           @include media($medium-screen) {
             text-align: center;
